--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_3391248_zxyxoj3x6r.css">
+  <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_1798858_ko8zmqvcrl.css"> -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <script type="text/javascript"
     src="https://webapi.amap.com/maps?v=1.4.15&key=56877270a0672b76f66c258254fee9be"></script>
